testdata/baselines/reference/submodule/conformance/jsDeclarationsCrossfileMerge(target=es2015).errors.txt
index.js(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== index.js (1 errors) ====
    const m = require("./exporter");
    
    module.exports = m.default;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.memberName = "thing";
    
==== exporter.js (0 errors) ====
    function validate() {}
    
    export default validate;
    